@@ -4,6 +4,10 @@ Revision history for Hailo
 
     - Tests failed on 0.42 without Test::Synopsis due to invalid test plan.
 
+    - Don't test with both Mouse and Moose on Windows. Failed with
+      Strawberry Perl + dmake, see report
+      07242729-b19f-3f77-b713-d32bba55d77f.
+
 0.42 2010-05-10 21:26:45
 
     - Hailo should now work on Windows. Dependency on two modules that
